libraries/OpenCL/OpenCL4Java/src/main/java/com/nativelibs4java/opencl/library/IOpenCLLibrary.java

	@Ptr 
	long clCreateImage3D(@Ptr long cl_context1, long cl_mem_flags1, @Ptr long cl_image_formatPtr1, @Ptr long size_t1, @Ptr long size_t2, @Ptr long size_t3, @Ptr long size_t4, @Ptr long size_t5, @Ptr long voidPtr1, @Ptr long cl_intPtr1);
	int clEnqueueMarker(@Ptr long cl_command_queue1, @Ptr long cl_eventPtr1);
	int clEnqueueWaitForEvents(@Ptr long cl_command_queue1, int cl_uint1, @Ptr long cl_eventPtr1);
	int clEnqueueBarrier(@Ptr long cl_command_queue1);
	/** Original signature : <code>cl_int clUnloadCompiler()</code> */
	int clUnloadCompiler();
	@Ptr 
	long clGetExtensionFunctionAddress(@Ptr long charPtr1);
	@Ptr 
	long clCreateFromGLBuffer(@Ptr long cl_context1, long cl_mem_flags1, int cl_GLuint1, @Ptr long intPtr1);
	@Ptr 
	@Optional 
	long clCreateFromGLTexture(@Ptr long cl_context1, long cl_mem_flags1, int cl_GLenum1, int cl_GLint1, int cl_GLuint1, @Ptr long cl_intPtr1);
	@Ptr 
	long clCreateFromGLRenderbuffer(@Ptr long cl_context1, long cl_mem_flags1, int cl_GLuint1, @Ptr long cl_intPtr1);
	int clGetGLObjectInfo(@Ptr long cl_mem1, @Ptr long cl_gl_object_typePtr1, @Ptr long cl_GLuintPtr1);
	int clGetGLTextureInfo(@Ptr long cl_mem1, int cl_gl_texture_info1, @Ptr long size_t1, @Ptr long voidPtr1, @Ptr long size_tPtr1);
	int clEnqueueAcquireGLObjects(@Ptr long cl_command_queue1, int cl_uint1, @Ptr long cl_memPtr1, int cl_uint2, @Ptr long cl_eventPtr1, @Ptr long cl_eventPtr2);
	int clEnqueueReleaseGLObjects(@Ptr long cl_command_queue1, int cl_uint1, @Ptr long cl_memPtr1, int cl_uint2, @Ptr long cl_eventPtr1, @Ptr long cl_eventPtr2);
	@Ptr 
	long clCreateFromGLTexture2D(@Ptr long cl_context1, long cl_mem_flags1, int cl_GLenum1, int cl_GLint1, int cl_GLuint1, @Ptr long cl_intPtr1);
	@Ptr 
	long clCreateFromGLTexture3D(@Ptr long cl_context1, long cl_mem_flags1, int cl_GLenum1, int cl_GLint1, int cl_GLuint1, @Ptr long cl_intPtr1);
	@Optional 
	int clGetGLContextInfoKHR(@Ptr long cl_context_propertiesPtr1, int cl_gl_context_info1, @Ptr long size_t1, @Ptr long voidPtr1, @Ptr long size_tPtr1);
	@Ptr 
	@Optional 
	long clCreateEventFromGLsyncKHR(@Ptr long cl_context1, @Ptr long cl_GLsync1, @Ptr long cl_intPtr1);
	@Optional 
	int clSetMemObjectDestructorAPPLE(@Ptr long cl_mem1, @Ptr long arg1, @Ptr long voidPtr1);
	@Optional 
	void clLogMessagesToSystemLogAPPLE(@Ptr long charPtr1, @Ptr long voidPtr1, @Ptr long size_t1, @Ptr long voidPtr2);
	@Optional 
	void clLogMessagesToStdoutAPPLE(@Ptr long charPtr1, @Ptr long voidPtr1, @Ptr long size_t1, @Ptr long voidPtr2);
	@Optional 
	void clLogMessagesToStderrAPPLE(@Ptr long charPtr1, @Ptr long voidPtr1, @Ptr long size_t1, @Ptr long voidPtr2);
	@Optional 
	int clIcdGetPlatformIDsKHR(int cl_uint1, @Ptr long cl_platform_idPtr1, @Ptr long cl_uintPtr1);
	@Optional 
	int clReleaseDeviceEXT(@Ptr long cl_device_id1);
	@Optional 
	int clRetainDeviceEXT(@Ptr long cl_device_id1);
	@Optional 
	int clCreateSubDevicesEXT(@Ptr long cl_device_id1, @Ptr long cl_device_partition_property_extPtr1, int cl_uint1, @Ptr long cl_device_idPtr1, @Ptr long cl_uintPtr1);
	@Optional 
	int clGetGLContextInfoAPPLE(@Ptr long cl_context1, @Ptr long voidPtr1, int cl_gl_platform_info1, @Ptr long size_t1, @Ptr long voidPtr2, @Ptr long size_tPtr1);
	public static class cl_device_id extends TypedPointer {
		public cl_device_id(long address) {
			super(address);
		}
		public cl_device_id(Pointer address) {
			super(address);
		}
	};
	public static class cl_mem extends TypedPointer {
		public cl_mem(long address) {
			super(address);
		}
		public cl_mem(Pointer address) {
			super(address);
		}
	};
	public static class cl_platform_id extends TypedPointer {
		public cl_platform_id(long address) {
			super(address);
		}
		public cl_platform_id(Pointer address) {
			super(address);
		}
	};
	public static class cl_event extends TypedPointer {
		public cl_event(long address) {
			super(address);
		}
		public cl_event(Pointer address) {
			super(address);
		}
	};
	public static class cl_GLsync extends TypedPointer {
		public cl_GLsync(long address) {
			super(address);
		}
		public cl_GLsync(Pointer address) {
			super(address);
		}
	};
	public static class cl_command_queue extends TypedPointer {
		public cl_command_queue(long address) {
			super(address);
		}
		public cl_command_queue(Pointer address) {
			super(address);
		}
	};
	public static class cl_context extends TypedPointer {
		public cl_context(long address) {
			super(address);
		}
		public cl_context(Pointer address) {
			super(address);
		}
	};
	public static class cl_program extends TypedPointer {
		public cl_program(long address) {
			super(address);
		}
		public cl_program(Pointer address) {
			super(address);
		}
	};
	public static class cl_sampler extends TypedPointer {
		public cl_sampler(long address) {
			super(address);
		}
		public cl_sampler(Pointer address) {
			super(address);
		}
	};
	public static class cl_kernel extends TypedPointer {
		public cl_kernel(long address) {
			super(address);
		}
		public cl_kernel(Pointer address) {
			super(address);
		}
	};
	/** Undefined type */
	public static interface __GLsync {
		
	};
	/** Undefined type */
	public static interface _cl_context {
		
	};
	/** Undefined type */
	public static interface _cl_event {
		
	};
	/** Undefined type */
	public static interface _cl_program {
		
	};
	/** Undefined type */
	public static interface _cl_sampler {
		
	};
	/** Undefined type */
	public static interface _cl_platform_id {
		
	};
	/** Undefined type */
	public static interface _cl_device_id {
		
	};
	/** Undefined type */
	public static interface _cl_kernel {
		
	};
	/** Undefined type */
	public static interface _cl_command_queue {
		
	};
	/** Undefined type */
	public static interface _cl_mem {
		
	};
}
